sign up layout (first step)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <ImageView
+        android:id="@+id/logo"
         android:layout_width="230dp"
         android:layout_height="130dp"
         android:contentDescription="@string/enterScreenLogoDescription"
@@ -17,26 +18,28 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/enterScreenText1"
+        android:id="@+id/enter_screen_text_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/enterScreenText1"
         android:textAlignment="center"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/enterScreenFontSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo"
         app:layout_constraintVertical_bias="0.449" />
 
     <TextView
-        android:id="@+id/enterScreenText2"
+        android:id="@+id/enter_screen_text_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/enterScreenText2"
@@ -46,68 +49,66 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enterScreenText1" />
+        app:layout_constraintTop_toBottomOf="@+id/enter_screen_text_1" />
 
     <Button
-        android:id="@+id/SignUpButton"
+        android:id="@+id/sign_up_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/rounded_button"
-        app:backgroundTint="@color/colorPrimary"
         android:letterSpacing="0.05"
-        android:padding="15dp"
         android:text="@string/enterScreenSignUpText"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/enterScreenButtonTextSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/facebookButton"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@+id/facebook_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/facebookButton"
+        android:id="@+id/facebook_button"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/rounded_button"
         app:backgroundTint="@color/facebookColor"
         android:letterSpacing="0.05"
-        android:padding="15dp"
         android:text="@string/facebookButtonText"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/enterScreenButtonTextSize"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/signInButton"
+        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/signInButton"
+        android:id="@+id/sign_in_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/rounded_button"
-        app:backgroundTint="@color/colorWhite"
         android:letterSpacing="0.05"
-        android:padding="15dp"
         android:text="@string/enterScreenSignInText"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/enterScreenButtonTextSize"
         android:textStyle="bold"
+        app:backgroundTint="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
