--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#1db954</color>
+    <color name="colorPrimaryLight">#2FCE68</color>
     <color name="colorPrimaryDark">#191414</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#B3B3B3</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGray">#ECECEC</color>
     <color name="facebookColor">#3b5998</color>
+    <color name="facebookColorLight">#4F71B8</color>
+    <color name="colorTransparentWhite">#D2FFFFFF</color>
+    <color name="colorExtraTransparentWhite">#79FFFFFF</color>
+    <color name="colorTransparentBlack">#57000000</color>
 </resources>
