--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -21,9 +21,9 @@
         android:id="@+id/enter_screen_text_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="8dp"
         android:text="@string/enter_screen_text_1"
         android:textAlignment="center"
@@ -53,15 +53,16 @@
         android:id="@+id/sign_up_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/rounded_button"
+        android:backgroundTint="@color/colorPrimary"
+        android:letterSpacing="0.05"
         android:text="@string/enter_screen_sign_up_text"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/enterScreenButtonTextSize"
         android:textStyle="bold"
-        app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/facebook_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -71,15 +72,16 @@
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/rounded_button"
+        android:backgroundTint="@color/facebookColor"
+        android:letterSpacing="0.05"
         android:text="@string/facebook_button_text"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/enterScreenButtonTextSize"
         android:textStyle="bold"
-        app:backgroundTint="@color/facebookColor"
         app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -89,15 +91,16 @@
         android:id="@+id/sign_in_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/rounded_button"
+        android:backgroundTint="@color/colorWhite"
+        android:letterSpacing="0.05"
         android:text="@string/enter_screen_sign_in_text"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/enterScreenButtonTextSize"
         android:textStyle="bold"
-        app:backgroundTint="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
