Setting Activities to only portrait mode Password icon and Password inputType changing on click Requesting permission to access user accounts

--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -58,7 +58,7 @@
         android:layout_marginBottom="15dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="@color/colorPrimary"
-        android:letterSpacing="0.05"
+        android:letterSpacing="@dimen/buttonLetterSpacing"
         android:text="@string/enter_screen_sign_up_text"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/enterScreenButtonTextSize"
@@ -77,7 +77,7 @@
         android:layout_marginBottom="15dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="@color/facebookColor"
-        android:letterSpacing="0.05"
+        android:letterSpacing="@dimen/buttonLetterSpacing"
         android:text="@string/facebook_button_text"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/enterScreenButtonTextSize"
@@ -96,7 +96,7 @@
         android:layout_marginBottom="50dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="@color/colorWhite"
-        android:letterSpacing="0.05"
+        android:letterSpacing="@dimen/buttonLetterSpacing"
         android:text="@string/enter_screen_sign_in_text"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/enterScreenButtonTextSize"
