--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,9 +15,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/ic_arrow_back_black_24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/retorn_button_description" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/return_button_description" />
 
     <TextView
         android:id="@+id/create_account_text"
@@ -32,9 +33,12 @@
         android:textColor="@color/colorWhite"
         android:textStyle="bold"
         android:text="@string/create_account_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textAlignment="center"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" />
 
 
     <TextView
@@ -48,10 +52,11 @@
         android:text="@string/label_email_text"
         android:textStyle="bold"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_account_text" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/create_account_text" />
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -63,9 +68,11 @@
         android:background="@drawable/edit_text"
         android:ems="10"
         android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label_email"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/label_email"
         tools:ignore="Autofill,LabelFor" />
 
     <TextView
@@ -78,8 +85,9 @@
         android:layout_marginTop="4dp"
         android:textColor="@color/colorWhite"
         android:text="@string/hint_email_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/email"
         tools:ignore="SmallSp" />
 
     <TextView
@@ -93,30 +101,49 @@
         android:text="@string/label_password_text"
         android:textStyle="bold"
         android:textColor="@color/colorWhite"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hint_email" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/hint_email" />
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="0dp"
+    <RelativeLayout
+        android:id="@+id/view_group_password"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:background="@drawable/edit_text"
-        android:ems="10"
-        android:drawableEnd="@drawable/ic_visibility_off_black_24dp"
-        android:drawableRight="@drawable/ic_visibility_off_black_24dp"
-        android:inputType="textPassword"
-        android:paddingRight="10dp"
-        android:paddingEnd="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label_password"
-        tools:ignore="Autofill,LabelFor,RtlSymmetry" />
+        android:layout_below="@+id/label_password">
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit_text"
+            android:ems="10"
+            android:inputType="textPassword"
+            android:paddingRight="10dp"
+            android:paddingEnd="10dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            tools:ignore="Autofill,LabelFor,RtlSymmetry" />
+
+        <ImageButton
+            android:id="@+id/password_visibility_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorTransparent"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_visibility_off_black_24dp"
+            android:contentDescription="@string/password_visibility_icon_description" />
+    </RelativeLayout>
+
 
     <TextView
         android:id="@+id/hint_password"
@@ -128,8 +155,9 @@
         android:textSize="11sp"
         android:textColor="@color/colorWhite"
         android:text="@string/hint_password_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/view_group_password"
         tools:ignore="SmallSp" />
 
     <Button
@@ -142,14 +170,13 @@
         android:layout_marginEnd="8dp"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
+        android:layout_centerHorizontal="true"
         android:textColor="@color/colorTransparentBlack"
         android:background="@drawable/rounded_button"
         app:backgroundTint="@color/colorExtraTransparentWhite"
         android:layout_marginRight="8dp"
         android:text="@string/next_button_text"
         android:textSize="17sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hint_password" />
+        android:layout_below="@+id/hint_password" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
