--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="enterScreenFontSize">34sp</dimen>
     <dimen name="enterScreenButtonTextSize">13sp</dimen>
+    <dimen name="buttonLetterSpacing">0.05</dimen>
 </resources>
