--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -56,7 +56,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/create_account_text" />
 
-    <AutoCompleteTextView
+    <EditText
         android:id="@+id/email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
