--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,7 +94,7 @@
         android:layout_marginBottom="50dp"
         android:background="@drawable/rounded_button"
         android:text="@string/enter_screen_sign_in_text"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorBlack"
         android:textSize="@dimen/enterScreenButtonTextSize"
         android:textStyle="bold"
         app:backgroundTint="@color/colorWhite"
