--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#1db954</color>
+    <color name="colorPrimaryDark">#0d642c</color>
     <color name="colorPrimaryLight">#2FCE68</color>
-    <color name="colorPrimaryDark">#191414</color>
-    <color name="colorAccent">#424242</color>
+    <color name="colorBlack">#191414</color>
+    <color name="colorAccent">#232425</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGray">#ECECEC</color>
+    <color name="colorDarkerGray">#878787</color>
     <color name="facebookColor">#3b5998</color>
     <color name="facebookColorLight">#4F71B8</color>
     <color name="colorTransparentWhite">#D2FFFFFF</color>
