--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorBlack</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -13,4 +13,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.GreenAccent">
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
 </resources>
